# KBehave

./: .gitignore  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SPEC.md  XBEHAVE_FEATURE_ANALYSIS.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml  publish.yml
gradle/wrapper/: gradle-wrapper.properties
src/main/kotlin/io/github/iamkoch/kbehave/: Example.kt  RemainingSteps.kt  Scenario.kt  ScenarioContext.kt  ScenarioExtension.kt  Step.kt  StepBuilder.kt  StepExtensions.kt  package-info.kt
src/main/kotlin/io/github/iamkoch/kbehave/engine/: KBehaveClassDescriptor.kt  KBehaveExampleDescriptor.kt  KBehaveScenarioDescriptor.kt  KBehaveStepDescriptor.kt  KBehaveTestEngine.kt
src/test/kotlin/io/github/iamkoch/kbehave/bazel/: BazelTestRunner.kt
src/test/kotlin/io/github/iamkoch/kbehave/engine/: KBehaveEngineTest.kt
src/test/kotlin/io/github/iamkoch/kbehave/examples/: BasicScenarioTest.kt  Calculator.kt  InlineTeardownTest.kt  OnFailureScenarioTest.kt  ParameterizedScenarioTest.kt  SkipScenarioTest.kt  TeardownScenarioTest.kt
