load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "kbehave",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:org_jetbrains_kotlin_kotlin_reflect",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@maven//:org_junit_platform_junit_platform_engine",
    ],
)

kt_jvm_library(
    name = "bazel-test-runner",
    testonly = True,
    srcs = ["src/test/kotlin/io/github/iamkoch/kbehave/bazel/BazelTestRunner.kt"],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_junit_platform_junit_platform_console",
    ],
)

kt_jvm_library(
  name = "tests-lib",
  testonly = True,
  srcs = glob([
    "src/test/kotlin/**/*.kt"
  ]),
  resources = glob(
    ["src/test/resources/**/*"],
    allow_empty = True,
  ),
  visibility = ["//visibility:public"],
  deps = [
    ":kbehave",
    "@maven//:org_jetbrains_kotlin_kotlin_test",
    "@maven//:org_junit_jupiter_junit_jupiter_api",
    "@maven//:org_junit_jupiter_junit_jupiter_engine",
  ]
)

java_test(
  name = "tests",
  use_testrunner = False,
  main_class = "io.github.iamkoch.kbehave.bazel.BazelTestRunner",
  # No hardcoded args - BazelTestRunner reads TESTBRIDGE_TEST_ONLY and handles them dynamically
  args = [],
  runtime_deps = [
      ":tests-lib",
      ":kbehave",
      ":bazel-test-runner",  # BazelTestRunner wrapper for dynamic test filtering
      "@maven//:org_junit_platform_junit_platform_launcher",
      "@maven//:org_junit_platform_junit_platform_console",
      "@maven//:org_junit_jupiter_junit_jupiter_engine",
  ]
)